added a download button and link

--- a/index.html
+++ b/index.html
@@ -26,14 +26,19 @@
                     <button id="saturation" class= "eighty"></button>
                     <button id="saturation" class= "hundred"></button>
                 </div>
-                <button id="reset">Reset</button>
+                <div class="resetDownload">
+                    <button id="reset">Reset</button>
+                    <a href="" id="downloadIcon">
+                        <embed src="./downloadLine.svg" type="image/svg+xml" class="download"/>
+                    </a>
+
+                </div>
                 <div class="gridSize">Grid Size</div>
                 <div class="sizes">
                         <button id="size" class='6'>s</button>
                         <button id="size" class = '9'>m</button>
                         <button id="size" class = '16'>l</button>
                 </div>
-               
             </div>
             <div class="grid"></div>
     </div>
